--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');@tailwind base;
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
 
+
+body {
+  font-family:"Bricolage Grotesque", Arial, Helvetica, sans-serif;
+}
+.font-DMSans {
+  font-family: 'DM Sans', sans-serif;
+}
+.font-Poppins{
+  font-family: 'Poppins', sans-serif;
+}
 @layer utilities {
   .text-balance {
     text-wrap: balance;
@@ -79,4 +89,23 @@ body {
     opacity: 1;
     z-index: -1;
   }
+  .loader {
+    width: 20px;
+    height: 20px;
+    border: 1px solid #FFF;
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+    }
+
+    @keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+    } 
 }
